@@ -75,11 +75,6 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
-          <configuration>
-              <source>19</source>
-              <target>19</target>
-              <compilerArgs>--enable-preview</compilerArgs>
-          </configuration>
       </plugin>
     </plugins>
   </build>
